# DeBias

./: .dockerignore  .gitignore  README.md  docker-compose.yml  download-model.py  download-models.py  generate-data.py  launch-scrapping.sh  minio.docker-compose.yml  processor.dockerfile  pyproject.toml  renderer.dockerfile  s3.docker-compose.yml  scaper.dockerfile  scraper.dockerfile  server.dockerfile
data/: news_sources.csv
data/parsed_sites/: abcnews.json
debias/: __init__.py
debias/core/: __init__.py  configs.py  metastore.py  models.py  parser.py  s3.py  wordstore.py
debias/processor/: README.md  __init__.py  app.py  config.py  example.config.toml  processor.py
debias/processor/nlp/: README.md  __init__.py  classifier.py  config.py  extractor.py  main.py  models.py  parser.py  utils.py
debias/renderer/: __init__.py  app.py  config.py  example.config.toml  readme.md  renderer.py
debias/scaper/: __init__.py  app.py  config.py  parser.py  readme.md
debias/scraper/: __init__.py  app.py  config.py  parser.py  readme.md  utils.py
debias/server/: __init__.py  app.py  config.py  example.config.toml  readme.md
debias/server/frontend/: dynamic_graph.js  index.html  static_graph.js  static_graph_left.js  static_graph_right.js
docs/: eda.html  index.html
experiments/: parse_AllSides.py  parse_abcnews.py
experiments/frontend/: dynamic_graph.js  index.html  old_index.html  parsed_news.json  script.js  static-graph-right.js  static-graph.js  static_graph.js  static_graph_left.js  style.css  topic_dist.js  topic_distribution.js
experiments/frontend/old/: old_parsed_news.json  old_script.js
experiments/nlp/: README.md  classifier.py  config.py  extractor.py  main.py  models.py  parser.py  requirements.txt  utils.py
spider/: .dockerignore  .gitignore  Dockerfile  config.go  dockerfile  errors.go  example.config.yaml  go.mod  go.sum  main.go  pyproject.toml  queue.go  readme.md  spider.go  storage.go  utils.go
spider/debias_spider/: __init__.py  app.py  config.py  metastore.py  models.py  parser.py  s3.py  utils.py
