[project]
name = "debias"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiobotocore>=2.14,<2.15",
    "annotated-types==0.7.0",
    "beautifulsoup4==4.13.3",
    "blis==1.3.0",
    "botocore>=1.35.0,<1.36",
    "bs4==0.0.2",
    "catalogue==2.0.10",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloudpathlib==0.21.0",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "confection==0.1.5",
    "cymem==2.0.11",
    "filelock==3.18.0",
    "fsspec==2025.3.2",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "langcodes==3.5.0",
    "language-data==1.3.0",
    "marisa-trie==1.2.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "murmurhash==1.0.12",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy==2.2.4",
    "nvidia-cublas-cu12==12.4.5.8 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.1.0.70 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.2.1.3 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.5.147 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.6.1.9 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.3.1.170 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparselt-cu12==0.6.2 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.21.5 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "packaging==24.2",
    "pip==25.0.1",
    "preshed==3.0.9",
    "psycopg>=3.2.6",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings>=2.8.1",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==14.0.0",
    "safetensors==0.5.3",
    "setuptools==78.1.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart-open==7.1.0",
    "soupsieve==2.6",
    "spacy==3.8.5",
    "spacy-alignments==0.9.1",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "spacy-transformers==1.3.8",
    "srsly==2.5.1",
    "sympy==1.13.1",
    "thinc==8.3.6",
    "tokenizers==0.21.1",
    "torch==2.6.0",
    "tqdm==4.67.1",
    "transformers==4.49.0",
    "triton==3.2.0 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "typer==0.15.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "wasabi==1.1.3",
    "weasel==0.4.1",
    "wrapt==1.17.2",
]

[dependency-groups]
dev = ["hatch>=1.14.0", "ruff>=0.11.2"]
scraper = [
    "faststream[cli,nats]>=0.5.37",
    "httpx>=0.28.1",
    "redis[hiredis]>=5.2.1",
]
renderer = [
    "faststream[cli,nats]>=0.5.37",
 "playwright>=1.51.0",
 "redis[hiredis]>=5.2.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.wheel]
only-packages = true
packages = ["debias/scraper", "debias/core"]

[tool.uv]
package = true

[tool.uv.workspace]
members = ["experiments/nlp"]


[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
pythonPlatform = "Linux"
reportUnknownMemberType = false
exclude = ["**/__pycache__", "**/.*"]

[tool.ruff]
exclude = [".mypy_cache", ".ruff_cache", ".venv", "venv", "build", "dist"]
line-length = 120
indent-width = 4
target-version = "py312"
fix = true

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = ["E", "F", "Q", "B", "I", "UP", "C"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-line-length = 128

[tool.ruff.lint.isort]
case-sensitive = true
force-single-line = false

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = []

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
]
