[project]
name = "debias"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiobotocore>=2.14,<2.15",
    "beautifulsoup4>=4.13.3",
    "botocore>=1.35.0,<1.36",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = ["hatch>=1.14.0", "ruff>=0.11.2"]
scraper = [
    "faststream[cli,nats]>=0.5.37",
    "httpx>=0.28.1",
    "redis[hiredis]>=5.2.1",
]
renderer = [
    "faststream[cli,nats]>=0.5.37",
    "playwright>=1.51.0",
    "redis[hiredis]>=5.2.1",
]
server = [
    "connectorx>=0.4.3",
    "litestar[standard]>=2.15.2",
    "msgspec>=0.19.0",
    "polars>=1.27.1",
    "pyarrow>=19.0.1",
]
processor = [
    "faststream[cli,nats]>=0.5.37",
    "redis[hiredis]>=5.2.1",
    "bs4>=0.0.2",
    "nltk>=3.9.1",
    "pip>=25.0.1",
    "python-dateutil>=2.9.0.post0",
    "spacy>=3.8.5",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.wheel]
only-packages = true
packages = [
    "debias/scraper",
    "debias/core",
    "debias/processor",
    "debias/server",
]

[tool.uv]
package = true


[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
pythonPlatform = "Linux"
reportUnknownMemberType = false
exclude = ["**/__pycache__", "**/.*"]

[tool.ruff]
exclude = [".mypy_cache", ".ruff_cache", ".venv", "venv", "build", "dist"]
line-length = 120
indent-width = 4
target-version = "py312"
fix = true

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = ["E", "F", "Q", "B", "I", "UP", "C"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-line-length = 128

[tool.ruff.lint.isort]
case-sensitive = true
force-single-line = false

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = []

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
]
